# vkdemo

./: .gitignore  .gitmodules  CMakeLists.txt  camera.cpp  camera.h  ecs.h  events.cpp  events.h  file.cpp  file.h  frame_context.cpp  frame_context.h  inputs.cpp  inputs.h  main.cpp  mesh.cpp  mesh.h  meshes.cpp  meshes.h  raycast.cpp  raycast.h  readme.md  semaphores.h  tasks.cpp  tasks.h  triangle.frag  triangle.frag.spv  triangle.vert  triangle.vert.spv  vk.cpp  vk.h
